Added new looks of "our tea"m section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	   <![endif]-->
 	   <style type="text/css">
-	
+/*	
 @media only screen and (max-width: 1000px){
 	.memeber_info_warper{
 		width: 400px;
@@ -150,7 +150,108 @@
     	height: 600px;
 	}
 	#team_table{
-    	margin:auto;}
+    	margin:auto;}*/
+
+    body{
+	font-family: 'lato', arail;
+}
+
+@media only screen and (min-width:500px ){  /* for desktop */
+ 	.social_icons{
+		width: 32px;
+		display: list-item;
+		margin: 10px;
+		margin: 2px;
+		cursor: pointer;
+	}
+	.team_mem_social{
+		margin: auto 20px auto auto;
+	}
+	.team_mem{
+		text-align: center;
+	}
+	.for_desktop_warper{
+		display: inline-flex;
+		width: 80%;
+	}
+	.team_mem_desc{
+		text-align: justify;
+		width: 90%;
+		margin: auto;
+	}
+	.team_mem_img > img{
+		height: 102%;
+		width: 102%;
+		margin-left: -2px;
+		margin-top: -2px;
+	}
+	.team_mem_img{
+		height: 214px;
+		width: 223px;
+		overflow: hidden;
+		border-radius: 100%;
+	}
+	.for_mobile_warper{
+		display: inline-flex;
+	}
+	.for_desktop_in_col>div{
+		display: list-item;
+		list-style: none;
+	}
+	.team_mem{
+		margin: 30px auto 30px auto;
+		width: 70%;
+	}
+	.team_mem_intro{
+		text-align: left;
+		margin-left: 30px;
+	}
+	.hr_line{
+		width: 80%;
+		margin: auto;
+	}
+}
+
+ @media only screen and (max-width:500px){ /* for mobile */
+	.social_icons{
+		width: 32px;
+		display: list-item;
+		margin: 10px;
+		margin: 2px;
+		cursor: pointer;
+	}
+	.team_mem_social{
+		margin: auto 20px auto auto;
+	}
+	.team_mem{
+		text-align: center;
+	}
+	.for_mobile_warper{
+		display: inline-flex;
+	}
+	.team_mem_desc{
+		text-align: justify;
+		width: 90%;
+		margin: auto;
+	}
+	.team_mem_img > img{
+		height: 102%;
+		width: 102%;
+		margin-left: -2px;
+		margin-top: -2px;
+	}
+	.team_mem_img{
+		height: 214px;
+		width: 223px;
+		overflow: hidden;
+		border-radius: 100%;
+	}
+	.team_mem{
+		height: auto;
+		margin: 30px auto 30px auto;
+	}
+ }
+
 </style>
 
 	</head>
@@ -615,8 +716,8 @@
 			
 			<section id="section-3" class="portfolio-section no-padding-bottom" class="hidden" style="text-align: center;padding-top: 30px;">
 				<span class="heading-title-ghost" style=" font-size: 50px;font-weight: 500; color:#ccc;font-family: 'Roboto Mono', 'lato', arial">our Team!</span>
-				<h2 class="heading-title" style="margin-top: -30px;font-size: 38px; margin-bottom: 30px;">Our Team!</h2>
-			<div id="team_warper">
+				<h2 class="heading-title" style="margin-top: -30px;font-size: 38px; margin-bottom: 30px;font-family: 'Roboto Mono', 'lato', arial">Our Team!</h2>
+			<!--<div id="team_warper">
 				<div class="team_warper_child back_img_warper">
 					<img src="assets/img/team/our-team.jpg" style="margin-top: -150px;" id="back_img"/>
 				</div>
@@ -624,7 +725,118 @@
 				<div>
 					<table id="team_table"></table></div>
 				</div>
+			</div> -->
+			<div id="team_warper">
+	<div class="team_mem team_mem_mondal">
+		<div class="for_desktop_warper">
+			<div class="for_mobile_warper">
+				<div class="team_mem_social">
+					<img src="assets/img/intro/if_facebook_circle_294710 (1).svg" class="social_icons" />
+					<img src="assets/img/intro/if_linkedin_circle_294706 (2).svg" class="social_icons"/>
+					<img src="assets/img/intro/if_twitter_circle_294709 (1).svg" class="social_icons"/>						
+				</div>
+				<div class="team_mem_img">
+					<img src="assets/img/team/Mondal.png" />
+				</div>
 			</div>
+			<div class="for_desktop_in_col">
+				<div class="team_mem_intro">
+					<h1 class="team_meme_name ">Anup Mondal </h1>
+					<h3 class="team_meme_desig ">Advisor</h3>
+				</div>
+				<div class="team_mem_desc team_mem_desc_1">
+					  ANUP MONDAL has 42 years of rich experience in Multinational Power companies including at Reliance Energy, awarded the best Utility (Mumbai Distribution) in India. As Sr. Executive Vice President, he led the Entire Network Operations and Asset Management Teams which drives growth and performance of Mumbai Electricity Distribution Business of Reliance Infrastructure Ltd. <br /> <br/>
+				</div>
+			</div>
+		</div>
+		<div class="team_mem_desc team_mem_desc_2">
+			He is one of the key architects of the company's successful strategies and has spearheaded Reliance Infra's Mumbai Distribution Business into one of the country's best power distribution utilities.<br /> <br/>
+			His efforts have led the company to a leadership position in the power distribution sector and helped create a significant presence throughout the country, while being recognized for their engineering innovations, people practices and corporate governance.<br/><br/>
+			Mondal served on the operating board of the Mumbai Distribution Business. Causes closest to his heart include Sustainable Development, Best in class engineering practices and Upgrading people's capabilities. His sustainability thinking has helped Reliance Infrastructure embrace green technologies and processes thereby reducing company's ecological footprint.<br/><br/>
+			An Electrical Engineer from the Bengal Engineering College, he has collaborated extensively with Government agencies, Consultants and Organizations globally. He has also closely interacted with the International Distribution companies in UK, Germany, France and Hong Kong.<br /> <br/>
+  			Mondal's career has seen significant stints with Siemens and AREVA (erstwhile ALSTOM) prior to joining Reliance Infrastructure.
+
+		</div>
+	</div>
+
+	<hr class="hr_line" />
+
+<!--|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
+
+	<div class="team_mem team_mem_promod">
+		<div class="for_desktop_warper">
+			<div class="for_mobile_warper">
+				<div class="team_mem_social">
+					<img src="assets/img/intro/if_facebook_circle_294710 (1).svg" class="social_icons" />
+					<img src="assets/img/intro/if_linkedin_circle_294706 (2).svg" class="social_icons"/>
+					<img src="assets/img/intro/if_twitter_circle_294709 (1).svg" class="social_icons"/>						
+				</div>
+				<div class="team_mem_img">
+					<img src="assets/img/team/Promod.png" />
+				</div>
+			</div>
+			<div class="for_desktop_in_col">
+				<div class="team_mem_intro">
+					<h1 class="team_meme_name ">Promod Sharma  </h1>
+					<h3 class="team_meme_desig ">Co Founder</h3>
+				</div>
+				<div class="team_mem_desc team_mem_desc_1">
+						Promod has 30+ years of experience with large Indian conglomerates and MNCs like Reliance, Sprint, Mastek, Trane, Escorts, Bajaj, and M&M. His last job was with Reliance ADA Group Company in leadership position as a CIO & VP for last 11 years. He is a Graduate in Commerce & Post Graduate in Management.<br/> <br/> 
+				</div>
+			</div>
+		</div>
+		<div class="team_mem_desc team_mem_desc_2">
+			He has worked extensively in verticals such utility, telecom, insurance, manufacturing, e-learning and IT consulting. He has three decades of leadership experience in Information Technology wherein he has a successful track record on both sides, as a consultant and in implementing in-house business processes.
+						 <br /> <br/>
+			Promod has rich techno-commercial experience in identifying & implementing business solutions using technology. His business mission is to strive to meet the client's (both internal & external) organisational goals collectively. He strongly believes in IT as a tool to automate business processes for success for businesses. 
+			<br/><br/>
+			He has founded couple of IT technology companies in Data Analytics & Fintech. He provides mentoring to young entrepreneurs in their startup projects. His specialisation is to provide strategic consultancy and preparing IT road maps. He does visit as guest faculty at some of top Indian management schools like IMI, MDI, IIFT, etc.
+		</div>
+	</div>
+
+<hr class="hr_line" />
+<!--|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
+
+	<div class="team_mem team_mem_rishi">
+		<div class="for_desktop_warper">
+			<div class="for_mobile_warper">
+				<div class="team_mem_social">
+					<img src="assets/img/intro/if_facebook_circle_294710 (1).svg" class="social_icons" />
+					<img src="assets/img/intro/if_linkedin_circle_294706 (2).svg" class="social_icons"/>
+					<img src="assets/img/intro/if_twitter_circle_294709 (1).svg" class="social_icons"/>						
+				</div>
+				<div class="team_mem_img">
+					<img src="assets/img/team/Rishi.png" />
+				</div>
+			</div>
+			<div class="for_desktop_in_col">
+				<div class=" team_mem_intro">
+					<h1 class="team_meme_name ">Rishi Bagga </h1>
+					<h3 class="team_meme_desig ">Co Founder</h3>
+				</div>
+				<div class="team_mem_desc team_mem_desc_1">
+					 	Rishi has found success in a number of diverse roles over the past 18 years in managing complex situations in technology businesses. <br /> <br/>
+						He has led large Business Transformational engagements leveraging Analytics
+						
+				</div>
+			</div>
+		</div>
+		<div class="team_mem_desc team_mem_desc_2"> and Information Technology at 
+			Corporations and Conglomerates across a gamut of verticals such as Automotive, Auto-Ancillary, Energy & Utilities, Consumer Goods, Retail and Process etc.
+						<br/><br/>
+			Representing the India Leadership in his previous assignment with SAS Inc, he has worked with C-Level clients to understand unique current and emerging business situations and risks & opportunities thereof to propose and execute breakthrough solutions impacting the client's bottom-line. <br/> <br/>
+			Over the past decade he has been evangelizing the adoption of Analytics in various market segments and has successfully overseen market penetration. Rishi has equal dexterity at strategic dialogues in the boardroom as well as contextual and tactical discussions with the user groups.<br/><br/> 
+
+			His significant area of contribution and success has been building capability and developing people to create and address greenfield opportunities for sustained and enduring organizational success.<br/><br/>
+
+			His areas of special interest are General Management, New and Emerging Digital Technologies, Entrepreneurship and Global Economy.
+
+
+		</div>
+	</div>
+</div>
+<hr class="hr_line" />
+
 
 			</section>
 			<!-- End section 3 -->
@@ -960,7 +1172,7 @@
 		***********************************************/-->
 		<!-- End Stylesheet Switcher JS -->
 
-	<script type="text/javascript">
+	<!-- <script type="text/javascript">
 	const disp_height = getComputedStyle(document.getElementsByClassName('content_child')[0]).height,
 			act_height = getComputedStyle(document.getElementById('team_table')).height;
 	const scroll_height = 1297; // in this case it ius zero but this has to set to the value upto which the user has to scroll to reach to this section i.e. javascript command is window.scrollY
@@ -1025,7 +1237,7 @@ His areas of special interest are General Management, New and Emerging Digital T
 		for(let i=0; i<o.length; i++){
 			td = document.createElement('td');
 			td.innerHTML = `
-				<div class="memeber_info_warper member_`+i+`" onclick = "open_team_mem_info(`+i+`)" >
+				<div class="memeber_info_warper member_`+i+`" onclick = "open_team_mem_info(`+i+`)" style="cursor:pointer" >
 					<img src ="`+o[i].img+`" class="member_`+i+`_img memeber_img memeber_info_`+i+`" />
 					<div class="member_`+i+`_srt_info memeber_info memeber_info_`+i+`" style="width:100%; text-align:center">
 						<h1 class="member_`+i+`_img memeber_name memeber_info_`+i+`">`+o[i].name+`</h1>
@@ -1077,7 +1289,7 @@ His areas of special interest are General Management, New and Emerging Digital T
 		`;
 		document.getElementById('myBtn').click();
 	}
-</script>
+</script> -->
 <link rel="stylesheet" type="text/css" href="model_box.css" />
 <script type="text/javascript" src="model_box.js"></script>
 	</body>
